[package]
name = "simpledb-rs"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/startserver.rs"

[dependencies]
once_cell = "1.12.0"
rand = "0.8.5"
tonic = "0.8.0"
tokio = { version = "1.20.1", features = ["rt-multi-thread"] }
prost = "0.11.0"
enum_dispatch = "0.3.8"

[build-dependencies]
tonic-build = { version = "0.8.0", features = ["prost"] }
